testdata/baselines/reference/compiler/expandoContextualTypes.errors.txt
expandoContextualTypes.tsx(20,12): error TS2879: Using JSX fragments requires fragment factory 'React' to be in scope, but it could not be found.


==== expandoContextualTypes.tsx (1 errors) ====
    // https://github.com/microsoft/typescript-go/issues/921
    
    /// <reference path="/.lib/react16.d.ts" />
    
    import type { ComponentType } from "react";
    
    export type Page<P = NonNullable<unknown>> = ComponentType<P> & {
        getLayout?: (component: JSX.Element) => JSX.Element;
    }
    
    export const FooPage: Page = () => {
        return (
            <div>
                <p>Foo</p>
            </div>
        )
    };
    
    FooPage.getLayout = () => {
        return <></>
               ~~
!!! error TS2879: Using JSX fragments requires fragment factory 'React' to be in scope, but it could not be found.
    };
    